Packing test